fixed css styling and adjusted alignment details

--- a/src/components/Details.css
+++ b/src/components/Details.css
@@ -2,7 +2,7 @@
 .details {
   display: flex;
   justify-content: space-around;
-  padding: 2rem;
+  padding: 0.5rem;
   background-color: #f9f9f9;
 }
 
